feat: 공연정보 API 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: com.sadowbass.outerpark
 spring:
   profiles:
     active: dev
