--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
   type-aliases-package: com.sadowbass.outerpark
+  configuration:
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true
+    jdbc-type-for-null: null
 spring:
   profiles:
     active: dev
