feat: 회원가입 기능 구현
학습테스트 코드 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -199,4 +199,6 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+**/learningtest/
+.idea/
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,intellij+all,java,gradle
